# ghc-goals

./: LICENSE  ghc-goals.cabal  index.html
examples/: Class.hs  GADTs.hs  Simple.hs  WithContext.hs
ghc-patch/: 0001-Initial-patch-containing-basic-goal-collection-code.patch
ghc-patch-files/: GoalCollector.hs  SybUtils.hs
offlinetest-goals/: OfflineTestGoalCollector.hs
offlinetest-goals/testfiles/: Test2.hs
run-scripts/: compile.sh  test-ghci.sh
src/: GhcGoals.hs  GoalCollector.hs  InteractiveUI.hs
src/Development/: GhcGoals.hs
src/Development/GhcGoals/: Collector.hs
src/testfiles/: Test2.hs
tests/: Dep.hs  HO.hs  Main.hs  TODO  Test.hs  Test3.hs  TestR.hs
vim/: ghc-goals.vim
