name:                ghc-goals
version:             0.0.4
synopsis:            Exposing the inferred types of undefineds
description:         During development of a Haskell program, we sometimes use
                     'undefined' when we're stuck and just want something to
                     type check and compile.
                     .
                     While this is a great way of tricking the compiler into
                     allowing your program, it doesn't help you in figuring out
                     what the type of your 'undefined' is supposed to be.
                     .
                     This package allows you to request the type of each
                     'undefined' according to the GHC type inferencer.
                     Included are a standalone executable and a library.
                     .
                     The executable can be used like so:
                     .
                     > $ ghc-goals test/Simple
                     > undefined :: Integer -> Char  -- Used in examples/Simple.hs:4:21-29
                     > undefined :: Char  -- Used in examples/Simple.hs:7:12-20
                     .
                     The library can be used from inside GHCi:
                     .
                     > ghci> :m + Development.GhcGoals
                     > ghci> goals "examples/WithContext"
                     > undefined :: (Show a) => a -> [Char]  -- Used in examples/WithContext.hs:4:6-14
                     .
                     Both the idea and the name for this feature are based on
                     goals in Agda.
license:             BSD3
license-file:        LICENSE
author:              Rui Barbosa,
                     Erik Hesselink <hesselink@gmail.com>,
                     Tom Lokhorst <tom@lokhorst.eu>,
                     Sebastiaan Visser
maintainer:          Tom Lokhorst
stability:           Experimental
category:            Development
build-type:          Simple
cabal-version:       >= 1.2
extra-source-files:  examples/*.hs

library
  hs-source-dirs:    src
  exposed-modules:   Development.GhcGoals
                     Development.GhcGoals.Collector
  build-depends:     base >= 4,
                     ghc,
                     ghc-paths >= 0.1 && < 0.2,
                     syb >= 0.1 && < 0.2
  if impl(ghc < 6.10.2)
    build-depends:   ghc-syb == 0.1.1.*
  else
    build-depends:   ghc-syb >= 0.1.1 && < 0.1.2

executable ghc-goals
  main-is:           GhcGoals.hs
  hs-source-dirs:    src

